# hackapizzaiug-restaurant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  sse_mock.py
da capo/: agenti.py  base.py  ingredienti.py
da capo/src/: config.py
docs/: API_EXAMPLES.md  DOCUMENTATION_INDEX.md  QUICK_START.md  TECHNICAL_DOCS.md  istruzioni.md
nuovo/: agenti.py  base.py
src/: agent.py  agents.py  api.py  config.py  constants.py  create_menu.py  main.py  memory.py  orchestrator.py  prompts.py  recipes.py  simple_orchestrator.py  sse.py  state.py
src/data/: ricette.py  test.py
